Navbar contrast fix + web app readme changes

--- a/client-side/web-app/src/components/ui-kit/global-styles/_navbar.scss
+++ b/client-side/web-app/src/components/ui-kit/global-styles/_navbar.scss
@@ -11,18 +11,17 @@
     @include with-contrasting-colors($navbar-bg-inverted);
   }
 
-  .navbar-nav {
-    .nav-link,
-    .navbar-text {
-      color: get-contrasting-color('body');
+  .navbar-brand,
+  .nav-link,
+  .navbar-text {
+    color: get-contrasting-color('body');
 
-      &:hover {
-        color: get-contrasting-color('body-hover');
-      }
+    &:hover {
+      color: get-contrasting-color('body-hover');
+    }
 
-      &:focus {
-        color: get-contrasting-color('body-hover');
-      }
+    &:focus {
+      color: get-contrasting-color('body-hover');
     }
   }
 
